Fixing arrow on ios

--- a/docs/assets/css/side_nav_menu.css
+++ b/docs/assets/css/side_nav_menu.css
@@ -106,7 +106,7 @@
     display: inline-block;
     transition: transform 0.3s ease;
     font-size: 16px;
-    font-family: Arial, sans-serif; /* Avoid system emoji font */
+    font-family: "Helvetica Neue", Arial, sans-serif; /* Avoid system emoji font */
   }
   
   .dropdown-content {
